--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.0.16",
+  "version": "1.0.17",
   "type": "module",
   "main": "dist/svg-map.umd.js",
   "module": "dist/svg-map.es.js",
@@ -60,8 +60,7 @@
   },
   "peerDependencies": {
     "react": ">=18.0.0 <20.0.0",
-    "react-dom": ">=18.0.0 <20.0.0",
-    "lucide-react": ">=0.344.0"
+    "react-dom": ">=18.0.0 <20.0.0"
   },
   "dependencies": {},
   "devDependencies": {
@@ -73,7 +72,6 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
-    "cross-env": "^10.1.0",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
