update build config

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -17,6 +17,11 @@
         "allowSyntheticDefaultImports": true
     },
     "include": [
-        "src"
+        "src/index.ts"
+    ],
+    "exclude": [
+        "**/*.test.ts",
+        "**/*.spec.ts",
+        "src/App.tsx"
     ]
 }
