--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.0.17",
+  "version": "1.0.20",
   "type": "module",
   "main": "dist/svg-map.umd.js",
   "module": "dist/svg-map.es.js",
@@ -46,7 +46,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:lib": "vite build --config vite.lib.config.ts",
-    "build:app": "vite build --config vite.app.config.ts",
+    "build:app": "vite build --config vite.app.config.ts --sourcemap false && cp dist-app/svg-map.bundle.umd.js dist-app/svg-map.bundle.min.js",
     "build:types": "tsc --project tsconfig.lib.json --emitDeclarationOnly --declaration --outDir dist",
     "build:all": "npm run clean && npm run build:lib && npm run build:app && npm run build:types",
     "clean": "rimraf dist dist-app",
@@ -62,11 +62,7 @@
     "react": ">=18.0.0 <20.0.0",
     "react-dom": ">=18.0.0 <20.0.0"
   },
-  "dependencies": {},
   "devDependencies": {
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -76,10 +72,14 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "lucide-react": "^0.344.0",
     "postcss": "^8.4.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-static-copy": "^3.1.3"
   }
 }
